test/Feature/Output/ubsan_unsigned_overflow.c.tmp.klee-out/test000002.overflow.err
Error: overflow on unsigned subtraction
File: /home/sanghu/TracerX/tracerx/test/Feature/ubsan_unsigned_overflow.c
Line: 23
assembly.ll line: 72
Stack: 
	#000000072 in main () at /home/sanghu/TracerX/tracerx/test/Feature/ubsan_unsigned_overflow.c:23
