test/Feature/Output/ubsan_unsigned_overflow.c.tmp.klee-out/test000002.pc
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Ult 4294967295
                  (Add w64 N0:(ZExt w64 (ReadLSB w32 0 x))
                           N1:(ZExt w64 (ReadLSB w32 0 y)))))
         (Ult 4294967295 (Sub w64 N0 N1))]
        false)
